# CompProgramming-2-Project-

./: .gitignore  AdvancedNonFinal  AdvancedNonFinal.cpp  CMakeLists.txt  IngredientTest.cpp  README.md  RecipeManager  RecipeManager.cpp  RecipeManger.cpp  finalcode.cpp  history.json  recipes.json  storage.json
HeaderFiles/: Fridge.cpp  Fridge.h  Ingredient.cpp  Ingredient.h  Pantry.cpp  Pantry.h  Recipe.cpp  Recipe.h  RecipeManager.cpp  RecipeManager.h  Storage.cpp  Storage.h
Tests/: FridgeTest.cpp  IngredientTest.cpp  IntegrationTest.cpp  PantryTest.cpp  RecipeManagerTest.cpp  RecipeTest.cpp  SimplifiedIngredientTest.cpp  StorageTest.cpp  tempCodeRunnerFile.cpp
